<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:tabTextColor="@color/Alpha"
            app:tabSelectedTextColor="@android:color/white"
            app:tabIndicatorColor="@android:color/white">

            <android.support.design.widget.TabItem
                android:id="@+id/Tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tab1"/>

            <android.support.design.widget.TabItem
                android:id="@+id/Tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tab2"/>

            <android.support.design.widget.TabItem
                android:id="@+id/Tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tab3"/>
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_Tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>
    </LinearLayout>
</FrameLayout>